style.css
body {
  margin: 0;
  padding: 0 5vw;
  font-family: "Gothic A1", sans-serif;
  overflow-x: hidden;
}

h1,
h2,
h3,
h4,
h5 {
  margin: 0;
}

a {
  color: #000000;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
  text-decoration-color: #3780a1;
  color: #3780a1;
}

/* h1 {
  padding-top: 16px;
} */

h4 {
  margin-bottom: 4px;
}

footer {
  /* height: 60px; */
  width: 100vw;
  margin-left: -5vw;
  padding-left: 5vw;
  background: #4c4c4c;
  color: #ffffff;
  /* text-decoration-color: #ffffff; */
  padding-top: 80px;
  padding-bottom: 16px;
  border-top: 1px solid #949494;
}

.posts {
  position: relative;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: 300px auto;
  grid-gap: 16px;
  z-index: -2;
}

.post {
  /* border-radius: 5px; */
  height: auto;
  overflow: hidden;
  box-sizing: initial;
}

.post-borders {
  border: 1px dashed black;
}

.story {
  margin-top: 8px;
}

.story-image {
  width: 100%;
  height: 50%;
  background: #e5e5e5;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
}

.img1 {
  background-image: url(https://lh3.googleusercontent.com/Linx0BQZt67O9rehDQI9EBbQdbTIntr1S0Qu5Z_0nAMeYiEccX_bHJZk29_cluelMWz110ScZw=w128-h128-e365);
}

.img2 {
  background-image: url(https://camo.githubusercontent.com/9b290de6835cf807aaa81bb6a7cfdf3835636f8c/68747470733a2f2f7261776769742e636f6d2f416c6c5468696e6773536d697474792f6373732d70726f746970732f6d61737465722f6d656469612f6c6f676f2e737667);
}

.img3 {
  background-image: url(https://1000logos.net/wp-content/uploads/2017/06/Twitter-Logo.png);
}

.img4 {
  background-image: url(https://cdn3.iconfinder.com/data/icons/spring-23/32/carrot-vegetable-spring-food-512.png);
}

.quick-post {
  padding-bottom: 8px;
  border-bottom: 1px solid #dbdbdb;
  margin-bottom: 8px;
}

.quick-post:last-of-type {
  margin-bottom: 0px;
  border-bottom: none;
}

.clock svg {
  width: 0.75em;
  height: 0.75em;
  margin-right: 4px;
}

#cssLogo {
  width: 5em;
  padding: 8px 0px 4px 0px;
}

.reading-time {
  border-right: 1px solid #dbdbdb;
  padding-right: 4px;
}

.category {
  padding-left: 8px;
}

.reading-time,
.category {
  font-size: 0.75em;
}

.block2 {
  background-image: url(https://css-tricks.com/wp-content/uploads/2018/12/guide-flexbox.png);
  background-size: cover;
  /* height: 300px; */
}

.title {
  margin-left: -5vw;
  padding-left: 5vw;
  padding-top: 16px;
  padding-bottom: 16px;
  width: 100vw;
  min-height: 56px;
  background: #bc312a;
  color: #ffffff;
  z-index: -3;
  margin-bottom: 16px;
}

article {
  /* width: 100px; */
  height: 100px;
  /* background: #e5e5e5; */
}

main {
  position: relative;
  margin: 0 auto;
  /* background: yellow; */
  max-width: 1280px;
  z-index: 0;
}

/* STYLING BLOCKS */
.block2 {
  grid-column: span 2;
}

.block4 {
  height: 100%;
  grid-row: span 2;
}

.grid {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: auto;
  display: flex;
  z-index: 1;
  pointer-events: none;
}

.column {
  height: 100%;
  width: 20%;
  background: rgba(129, 41, 56, 0.5);
  margin-right: 16px;
}

.column:last-child {
  margin-right: 0px;
}

nav {
  z-index: 10;
}

.grid-control-wrapper {
  position: fixed;
  top: calc(100vh - 50px);
  right: 50px;
  color: #ffffff;
  background-color: #000000;
  padding: 5px 10px;
  border-radius: 5px;
  z-index: 2;
}

.grid-control-wrapper__hidden {
  display: none;
}

/* MEDIA QUERIES FOR RESPONSIVE BREAKPOINTS */

/* @media only screen and (min-width: 1280px) {
  main {
    max-width: 1280px;
  }
} */

@media only screen and (min-width: 768px) and (max-width: 1024px) {
  main {
    max-width: 1024px;
  }
  .col5 {
    display: none;
  }
  .col4 {
    margin-right: 0px;
  }
  .column {
    width: 25%;
  }

  .posts {
    grid-template-columns: repeat(4, 1fr);
  }

  .block3 {
    grid-row: span 1;
  }

  .block8 {
    display: none;
  }
}

@media only screen and (min-width: 1px) and (max-width: 768px) {
  main {
    max-width: 768px;
  }
  .col4,
  .col5 {
    display: none;
  }
  .col3 {
    margin-right: 0px;
  }
  .column {
    width: calc(100% / 3);
  }
  .posts {
    grid-template-columns: repeat(3, 1fr);
  }

  .block4 {
    height: 300px;
  }

  .block6,
  .block7,
  .block8 {
    display: none;
  }
}

